@@ -58,6 +58,8 @@ static void   gimp_clone_motion       (GimpSourceCore   *source_core,
                                        GimpImage        *src_image,
                                        GimpPickable     *src_pickable,
                                        PixelRegion      *srcPR,
+                                       gint              src_offset_x,
+                                       gint              src_offset_y,
                                        TempBuf          *paint_area,
                                        gint              paint_area_offset_x,
                                        gint              paint_area_offset_y,
@@ -150,6 +152,8 @@ gimp_clone_motion (GimpSourceCore   *source_core,
                    GimpImage        *src_image,
                    GimpPickable     *src_pickable,
                    PixelRegion      *srcPR,
+                   gint              src_offset_x,
+                   gint              src_offset_y,
                    TempBuf          *paint_area,
                    gint              paint_area_offset_x,
                    gint              paint_area_offset_y,
@@ -212,8 +216,8 @@ gimp_clone_motion (GimpSourceCore   *source_core,
             case GIMP_PATTERN_CLONE:
               gimp_clone_line_pattern (image, drawable,
                                        pattern, d,
-                                       paint_area->x     + paint_area_offset_x,
-                                       paint_area->y + y + paint_area_offset_y,
+                                       paint_area->x     + src_offset_x,
+                                       paint_area->y + y + src_offset_y,
                                        destPR.bytes, destPR.w);
               break;
             }
