@@ -56,6 +56,8 @@ static void   gimp_heal_motion (GimpSourceCore   *source_core,
                                 GimpImage        *src_image,
                                 GimpPickable     *src_pickable,
                                 PixelRegion      *srcPR,
+                                gint              src_offset_x,
+                                gint              src_offset_y,
                                 TempBuf          *paint_area,
                                 gint              paint_area_offset_x,
                                 gint              paint_area_offset_y,
@@ -348,6 +350,8 @@ gimp_heal_motion (GimpSourceCore   *source_core,
                   GimpImage        *src_image,
                   GimpPickable     *src_pickable,
                   PixelRegion      *srcPR,
+                  gint              src_offset_x,
+                  gint              src_offset_y,
                   TempBuf          *paint_area,
                   gint              paint_area_offset_x,
                   gint              paint_area_offset_y,
